# CodeCracker

./: .gitignore  README.md  main.py  pyproject.toml
analysis/: analysis.ipynb
data/: SecurityEval.py
memory/: SKILL.md
src/codecracker/callbacks/: metrics.py  progress.py
src/codecracker/secure_codegen/: agent.py  naive_agent.py
src/codecracker/secure_codegen/prompt/: code_generation.j2  system_prompt.j2
src/codecracker/secure_codegen/schema/: __init__.py  output.py
src/codecracker/tools/: __init__.py  ast_check.py  ast_check_tool.py  bandit.py  bandit_tool.py  pylint_check.py  pylint_check_tool.py  security_tool.py  semgrep.py  semgrep_tool.py
src/codecracker/utils/: analyze_logs.py  dataset.py  log.py  prompt_utils.py  skill_memory.py
